# kloud

./: .gitignore  README.md  go.mod  go.sum  main.go
cache/: cache.go  redis.go
client-rs/: Cargo.toml  package.json  test.file  test_diff.file  tsconfig.json
client-rs/src/: App.tsx  main.rs  styles.css
client-rs/src-tauri/: Cargo.toml  tauri.conf.json
client-rs/src-tauri/kloud/: Cargo.toml
client-rs/src-tauri/kloud/src/fs/: block.rs  block_list.rs  file.rs  mod.rs
client-rs/src-tauri/src/: main.rs  sync.rs  user.rs
client-rs/src-tauri/src/fs/: block.rs  file.rs
client-rs/src/api/: api.ts
client-rs/src/components/: File.tsx  Files.tsx  Footer.tsx  Header.tsx  History.tsx  Main.tsx  SideBar.tsx
client-rs/src/components/basic/: Button.tsx  Card.tsx  ContextMenu.tsx  Dialog.tsx  FilePicker.tsx
client-rs/src/fs/: block.rs  block_list.rs  file.rs
client-rs/src/interfaces/: IFile.ts  ILog.ts
client-rs/src/store/: store.tsx
client/model/: block.go  blockList.go  file.go
client/user/: user.go
constant/: constant.go
db/: db.go  db_action.go
doc/: api.md
fs/: fs.go
model/: block.go  blockList.go  file.go
server/: go.mod  main.go  route.go  test.txt
server/cache/: cache_action.go  no_cache.go  redis.go
server/constant/: constant.go
server/controller/: download.go  fetch.go  post.go
server/db/: badger.go  db_action.go  mongodb.go  tikv.go  util.go
server/db/store/badger/blocks/: 000000.vlog
server/db/store/badger/files/: 000000.vlog
server/logger/: logger.go
server/model/: block.go  blockList.go  file.go
server/user/: user.go
(+1 files in other folders)
