[package]
name = "kloud"
version = "0.0.0"
edition = "2021"

[dependencies]
blake3 = "1.5.0"
base64 = "0.21.4"
chrono = "0.4.31"
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
url = "2.4.1"
reqwest = { version = "0.11.20", features = ["json"] }
zstd = "0.12.4"
base64-url = "2.0.0"
base62 = "2.0.2"
base-62 = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"